--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -13,6 +13,8 @@
         <java.version>1.8</java.version>
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
+
         <junit.jupiter.version>5.6.2</junit.jupiter.version>
         <maven.maven-compiler-plugin.version>3.8.1</maven.maven-compiler-plugin.version>
         <maven.maven-surefire-plugin.version>3.0.0-M4</maven.maven-surefire-plugin.version>
